--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,2 +1,9 @@
+<icc-about></icc-about>
+<icc-about-button [label]="label"></icc-about-button>
+
+<!--
+
 <icc-icc></icc-icc>
 <icc-button [label]="label"></icc-button>
+
+-->
