add grid basic cdk

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,6 +1,7 @@
 <icc-about></icc-about>
 <icc-about-button [label]="label"></icc-about-button>
 
+<icc-grid></icc-grid>
 <!--
 
 <icc-icc></icc-icc>
