add grid models

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,9 @@
 <icc-about></icc-about>
 <icc-about-button [label]="label"></icc-about-button>
 
-<icc-grid></icc-grid>
+<icc-grid [columnConfig]="columnConfig">
+
+</icc-grid>
 <!--
 
 <icc-icc></icc-icc>
