--- a/projects/icc/grid/src/components/grid-display.component.scss
+++ b/projects/icc/grid/src/components/grid-display.component.scss
@@ -1,3 +1,4 @@
+
 cdk-row, cdk-header-row, cdk-footer-row {
   display: flex;
 }
@@ -5,3 +6,21 @@ cdk-row, cdk-header-row, cdk-footer-row {
 cdk-cell, cdk-header-cell, cdk-footer-cell {
   flex: 1;
 }
+/*
+table {
+  width: 100%;
+}
+
+th {
+  text-align: left;
+}
+
+
+cdk-row, cdk-header-row, cdk-footer-row {
+  display: flex;
+}
+
+cdk-cell, cdk-header-cell, cdk-footer-cell {
+  flex: 1;
+}
+  */
