--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,10 @@
 <icc-about></icc-about>
 <icc-about-button [label]="label"></icc-about-button>
 
-<icc-grid [columnConfig]="columnConfig">
+<icc-grid
+  [gridName]="gridName"
+  [columnConfig]="columnConfig"
+  >
 
 </icc-grid>
 <!--
