--- a/projects/icc/grid/src/components/grid-header/grid-header.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header.component.html
@@ -5,10 +5,10 @@
 
 
 <ng-container *ngFor="let column of columnConfig; let index = index;">
-  <icc-table-header-cell
+  <icc-grid-header-cell
     [column]="column"
   >
-  </icc-table-header-cell>
+  </icc-grid-header-cell>
 </ng-container>
 
 
