--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -1,8 +1,8 @@
 <!--ngrx-grid-display-->
 
-<icc-table-header [columnConfig]="columnConfig">
+<icc-grid-header [columnConfig]="columnConfig">
 
-</icc-table-header>
+</icc-grid-header>
 
 
 <!--
