--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -2,4 +2,4 @@
 
 </icc-grid-display>
 
-<icc-table [columnConfig]="columnConfig"></icc-table>
+<icc-grid-view [columnConfig]="columnConfig"></icc-grid-view>
