add grid row and cell

--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
@@ -1,9 +1,5 @@
-
-cdk-row, cdk-header-row, cdk-footer-row {
+:host {
   display: flex;
-}
-
-cdk-cell, cdk-header-cell, cdk-footer-cell {
   flex: 1;
 }
 /*
