--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,5 +1,6 @@
-<icc-grid-display [columnConfig]="columnConfig">
 
-</icc-grid-display>
-
-<icc-grid-view [columnConfig]="columnConfig"></icc-grid-view>
+<icc-grid-view
+  [columnConfig]="columnConfig"
+  [gridRows]="gridData"
+  >
+</icc-grid-view>
