--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -2,5 +2,31 @@
 
 -->
 
-<div class="grid-header-cell">{{ column.field}}</div>
+<div class="grid-header-cell">
+  <div class="grid-header-cell-title">{{ title }}</div>
+  <div class="grid-header-cell-sort">
+    <i class="fa-solid fa-caret-up"></i>
+    <i class="fa-solid fa-caret-down"></i>
+  </div>
+</div>
+
+<ng-container>
+  <div class="grid-header-cell-menu">
+    <i class="fa-solid fa-bars"></i>
+  </div>
+</ng-container>
+<!--
+
+<i class="fa-solid fa-bars"></i>
+caret-up
+  <i class="caret caret-down" [ngStyle]="downCaretStyle"></i>
+
+<ngrx-button *ngIf="sortAvailable"
+             (click)="onApplySort()"
+             class="d-flex flex-direction-column p-0"
+             buttonStyle="plain">
+  <i class="caret caret-up" [ngStyle]="upCaretStyle"></i>
+  <i class="caret caret-down" [ngStyle]="downCaretStyle"></i>
+</ngrx-button>
+-->
 
