--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,15 @@
-<icc-grid
-  [gridName]="gridName"
-  [columnConfig]="columnConfig"
-  [gridData]="gridData"
-  >
-</icc-grid>
+<div class="icc-top-nav-bar"> Top Nav Bar </div>
 
+<div class="icc-main-container">
+  <div class="icc-left-side-bar"> Side Bar </div>
+  <div class="icc-center-view">
+    <icc-grid
+      [gridName]="gridName"
+      [columnConfig]="columnConfig"
+      [gridData]="gridData"
+      >
+    </icc-grid>
+  </div>
+</div>
+
+<div class="icc-footer-bar"> Footer Bar </div>
