--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -6,6 +6,7 @@
 
 </icc-grid-header>
 
+
 <cdk-virtual-scroll-viewport itemSize="25">
   <icc-grid-row *cdkVirtualFor="let rowData of gridRows; let index = index;"
     [columns]="columnConfig"
@@ -14,11 +15,22 @@
 </cdk-virtual-scroll-viewport>
 
 <!--
-<cdk-virtual-scroll-viewport itemSize="50" class="example-viewport">
-  <div *cdkVirtualFor="let item of items; let i = index" class="example-item">
-    {{ item }}
-  </div>
+
+
+<cdk-virtual-scroll-viewport itemSize="25">
+  <icc-grid-row *cdkVirtualFor="let rowData of gridRows; let index = index;"
+    [columns]="columnConfig"
+    [record]="rowData">
+  </icc-grid-row>
 </cdk-virtual-scroll-viewport>
+
+<div class="icc-grid-view-port">
+  <icc-grid-row *ngFor="let rowData of gridRows; let index = index;"
+    [columns]="columnConfig"
+    [record]="rowData">
+  </icc-grid-row>
+</div>
+
 
 
 <cdk-virtual-scroll-viewport class="list-container list-group" autosize>
