--- a/projects/icc/grid/src/components/grid-view.component.scss
+++ b/projects/icc/grid/src/components/grid-view.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   height: -webkit-fill-available;
-  cdk-virtual-scroll-viewport {
+  cdk-virtual-scroll-viewport, .icc-grid-view-port {
     flex: 1;
   }
 }
