add dynamic cell view

--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -1,7 +1,9 @@
 <div class="icc-top-nav-bar"> Top Nav Bar </div>
 
 <div class="icc-main-container">
-  <div class="icc-left-side-bar"> Side Bar </div>
+  <div class="icc-left-side-bar"> Side Bar
+    <mat-checkbox>Checked</mat-checkbox>
+  </div>
   <div class="icc-center-view">
     <icc-grid
       [gridName]="gridName"
@@ -12,4 +14,6 @@
   </div>
 </div>
 
-<div class="icc-footer-bar"> Footer Bar </div>
+<div class="icc-footer-bar"> Footer Bar
+
+</div>
