--- a/projects/icc/grid/src/components/row-select/row-select.component.scss
+++ b/projects/icc/grid/src/components/row-select/row-select.component.scss
@@ -1,6 +1,6 @@
-@import "../../../styles/checkbox";
+//@import "../../../styles/checkbox";
 
 :host {
-  display: flex;
+ // display: flex;
   align-items: center;
 }
