--- a/projects/icc-demo/src/styles.scss
+++ b/projects/icc-demo/src/styles.scss
@@ -2,6 +2,10 @@
 //@import 'font-awesome/css/font-awesome.css';
 
 
+.mat-mdc-checkbox {
+  --mdc-checkbox-state-layer-size: 20px;
+}
+
 //$fa-font-path: '@fortawesome/fontawesome-free/webfonts';
 @import '@fortawesome/fontawesome-free/scss/fontawesome.scss';
 @import '@fortawesome/fontawesome-free/scss/regular.scss';
