--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -2,13 +2,13 @@
   display: flex;
   width: 100%;
   //     width: 250px;
-
+/*
   border-style: solid;
   border-color: grey;
   border-width: 1px 0px 0px 1px;
   padding: 0 15px;
   line-height: 32px;
-
+*/
   .grid-header-cell {
      display: flex;
      justify-content: center;
