--- a/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-row/grid-cell/grid-cell.component.scss
@@ -8,6 +8,12 @@
   //color: $text-color;
   //border-bottom: 1px solid $border-color;
 
+  border-style: solid;
+  border-color: grey;
+  border-width: 1px 0px 0px 1px;
+  padding: 0 15px;
+  line-height: 25px;
+
  &.expandable-row {
    justify-content: center;
    align-items: center;
