add grid toolbars

--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,6 +1,14 @@
 
+<div class="icc-grid-toolbar">
+  Top Toolbar
+</div>
 <icc-grid-view
   [columnConfig]="columnConfig"
   [gridRows]="gridData"
   >
 </icc-grid-view>
+
+<div class="icc-grid-bottom-bar">
+  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+  </mat-paginator>
+</div>
