--- a/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
@@ -2,6 +2,7 @@
  // min-height: $header-height;
  // padding: $cell-padding;
   display: flex;
+  flex-direction: column;
   width: 100%;
   align-items: center;
   justify-content: flex-start;
@@ -11,7 +12,7 @@
   border-style: solid;
   border-color: grey;
   border-width: 1px 0px 0px 1px;
-  padding: 0 15px;
+  padding: 0 10px;
   line-height: 32px;
 
   &.cdk-drag {
