add column filter

--- a/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-item/grid-header-item.component.scss
@@ -11,8 +11,8 @@
 
   border-style: solid;
   border-color: grey;
-  border-width: 1px 0px 0px 1px;
-  padding: 0 10px;
+  border-width: 1px 0px 1px 1px;
+  //padding: 0 10px;
   line-height: 32px;
 
   &.cdk-drag {
