--- a/projects/icc/grid/src/components/grid-view.component.html
+++ b/projects/icc/grid/src/components/grid-view.component.html
@@ -2,8 +2,8 @@
 
 
 
-<icc-grid-header
-  [columnConfig]="columnConfig"
+<icc-grid-header *ngIf="columnConfig$ | async as columns"
+  [columnConfig]="columns"
   (filterGrid)="filterGrid.emit($event)"
   (sortGrid)="sortGrid.emit($event)"
   (cdkDropListDropped)="onDrop($event)"
