--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -3,6 +3,7 @@
   Top Toolbar
 </div>
 <icc-grid-view
+  [gridConfig]="gridConfig"
   [gridName]="gridName"
   [columnConfig]="columnConfig"
   [gridRows]="gridData"
