--- a/projects/icc-demo/src/app/app.component.html
+++ b/projects/icc-demo/src/app/app.component.html
@@ -7,9 +7,9 @@
 
   <div class="icc-center-view">
     <icc-grid
-      [gridName]="gridName"
       [columnConfig]="columnConfig"
       [gridData]="gridData"
+      [gridConfig]="gridConfig"
       >
     </icc-grid>
   </div>
