--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -4,7 +4,7 @@
 </div>
 <icc-grid-view
   [gridConfig]="gridConfig"
-  [gridName]="gridName"
+  [gridName]="gridConfig.gridName"
   [columnConfig]="columnConfig"
   [gridRows]="gridData"
   >
