--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -5,7 +5,7 @@
 <icc-grid-view
   [gridConfig]="gridConfig"
   [columnConfig]="columnConfig"
-  [gridRows]="gridData"
+  [gridData]="gridData"
   >
 </icc-grid-view>
 
