--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.html
@@ -11,12 +11,14 @@
 </div>
 
 <ng-container>
-  <div class="grid-header-cell-menu">
+
+  <button icc-button class="grid-header-cell-menu">
     <i class="fa-solid fa-bars"></i>
-  </div>
+  </button>
+
 </ng-container>
 <!--
-
+<button sun-button
 <i class="fa-solid fa-bars"></i>
 caret-up
   <i class="caret caret-down" [ngStyle]="downCaretStyle"></i>
