--- a/projects/icc/grid/src/grid.component.scss
+++ b/projects/icc/grid/src/grid.component.scss
@@ -14,8 +14,11 @@
   }
 
   .icc-grid-bottom-bar {
+    display: flex;
     height: 32px;
     background-color: gray;
+   // flex-direction: column;
+   justify-content: center;
     align-items: center;
     //justify-content: left;
   }
