--- a/projects/icc/grid/src/grid.component.html
+++ b/projects/icc/grid/src/grid.component.html
@@ -1,28 +1,18 @@
+<ng-container *ngIf="gridConfig$ | async as gridConfig">
+  <div class="icc-grid-toolbar">
+    <button (click)="refresh()">
+      Refresh
+    </button>
+  </div>
+  <icc-grid-view
+    [gridConfig]="gridConfig"
+    [columnConfig]="columnConfig"
+    [gridData]="gridData"
+    >
+  </icc-grid-view>
 
-<div class="icc-grid-toolbar">
-  <button (click)="refresh()">
-    Refresh
-  </button>
-</div>
-<icc-grid-view
-  [gridConfig]="gridConfig"
-  [columnConfig]="columnConfig"
-  [gridData]="gridData"
+  <icc-grid-footer
+    [gridConfig]="gridConfig"
   >
-</icc-grid-view>
-
-<div class="icc-grid-bottom-bar">
-  <button (click)="getPrevPageData()" [disabled]="isFirstPage$ | async">
-    Prev
-  </button>
-  <button (click)="getNextPageData()" [disabled]="isLastPage$ | async">
-    Next
-  </button>
-  <!--
-  <mat-paginator [length]="100" [pageSize]="10" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
-  </mat-paginator>
-    -->
-</div>
-<!--
-  first prev | page 1 of 20 | next last | refresh |
--->
+  </icc-grid-footer>
+</ng-container>
