--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -4,4 +4,11 @@
   background-color: gray;
   justify-content: center;
   align-items: center;
+
+  button {
+    margin-right: 5px;
+  }
+  span {
+    margin: 0 5px;
+  }
 }
