footer flex align

--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
@@ -44,7 +44,7 @@
   >
 </span>
 
-<span>{{displaying}}</span>
+<span class="grid-footer-displaying">{{displaying}}</span>
 <!--
     first prev | page 1 of 20 | next last | refresh |
 
