--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.scss
@@ -2,13 +2,18 @@
   display: flex;
   height: 32px;
   background-color: gray;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
+  padding: 0 10px;
 
   button {
     margin-right: 5px;
   }
   span {
     margin: 0 5px;
+  }
+
+  .grid-footer-displaying {
+    margin-left: auto;
   }
 }
