--- a/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
+++ b/projects/icc/grid/src/components/grid-header/grid-header-cell/grid-header-cell.component.scss
@@ -22,6 +22,7 @@
 
     .grid-header-cell-title {
       display: inline-block;
+      cursor: default;
       font-size: 13px;
       font-weight: 600;
       //margin: 0 $size-xs 0 0;
@@ -41,6 +42,7 @@
       display: flex;
       flex-direction: column;
       padding-left: 5px;
+      cursor: default;
     }
   }
   .grid-header-cell-menu {
